LPS-152847 Add horizontal scroll when the table is fixed and has many columns

--- a/modules/apps/frontend-data-set/frontend-data-set-web/src/main/resources/META-INF/resources/styles/_dnd_table.scss
+++ b/modules/apps/frontend-data-set/frontend-data-set-web/src/main/resources/META-INF/resources/styles/_dnd_table.scss
@@ -140,6 +140,7 @@
 
 	&.fixed {
 		display: block;
+		overflow: auto;
 	}
 
 	&.is-dragging {
